# teaching_warehouse

./: .Rbuildignore  .gitignore  2020-07-updates.md  README.Rmd  README.html  README.md  _quarto-mastering-r.yml  _quarto.yml  _stash.md  au_course.R  fix_slide_separators.py  forforepi.R  r_teaching_warehouse.Rproj
R/: au_course.R  forforepi.R  get_all_deps.R  library.R  normalize_module.R  render_slides.R  sync_mastering_r.R  update_cheatsheets.R
causal_modeling/: causal_modeling.Rmd  causal_modeling.html  exercises.Rmd  exercises.qmd  temporary_solutions.Rmd
causal_modeling_whole_game/: causal_modeling_whole_game.Rmd  exercises.Rmd  exercises.qmd
containers/: Makefile  _targets.R  containers.html  containers.qmd  copy_dockerfile_template.R  exercises_py.qmd  exercises_py.quarto_ipynb  exercises_r.qmd  helpers.py  install_quarto.sh  penguins.R  penguins.py  pyproject.toml
dags/: dags.Rmd  exercises.Rmd  exercises.qmd
intro/: intro.Rmd  (+3 more)
make_basics/: Makefile  exercises.qmd  make_basics.html  make_basics.qmd  pyproject.toml  report.qmd
make_basics/scripts/: create_figure_one.py  create_table_one.py  create_table_two.py  listify_descriptions.py  plot_barplot_change.py  read_diabetes.py
make_basics/slides_pipeline/: Makefile  pyproject.toml  report.qmd
make_basics/slides_pipeline/scripts/: create_line_plot.py
make_basics/templates/: your_turn_2  your_turn_3  your_turn_4  your_turn_5  your_turn_6  your_turn_7
make_whole_game/: copy_makefile_template.py  exercises.qmd  pyproject.toml  whole_game.qmd  whole_game_solution.qmd
make_whole_game/scripts/: clean_brazil_loss.py  plot_barplot_change.py  plot_cause_hist.py  plot_forest_map.py  read_brazil_loss.py  read_forest.py  table_brazil_causes.py  utils.py
make_whole_game/templates/: your_turn_1  your_turn_2  your_turn_3  your_turn_4  your_turn_5  your_turn_6  your_turn_7
py_quarto_basics/: citations.bib  exercises.qmd  helpers.py  py_quarto_basics.html  py_quarto_basics.qmd  pyproject.toml  requirements.txt
py_quarto_basics/img/: diagrams.key
py_quarto_basics/templates/: your_turn_4.qmd  your_turn_5.qmd  your_turn_6.qmd  your_turn_7.qmd  your_turn_8.qmd
py_quarto_whole_game/: exercises.qmd  helpers.py  py_whole_game.qmd  pyproject.toml  references.bib  requirements.txt  whole_game.qmd
py_quarto_whole_game/.devcontainer/: devcontainer.json
py_quarto_whole_game/templates/: references.bib  your_turn_3.qmd  your_turn_4.qmd  your_turn_5.qmd  your_turn_6.qmd  your_turn_7.qmd
tables_tables_tables/: pyproject.toml  tables_tables_tables.html  tables_tables_tables.qmd
tables_tables_tables/typst/: great-tables-typst.qmd  great-tables-typst.typ  gt-typst.qmd  gt-typst.typ
(+500 files in other folders)
