[project]
name = "py-quarto-whole-game"
version = "0.1.0"
description = "Quarto for Python: The Whole Game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "great-tables>=0.17.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "polars>=1.31.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[tool.uv.sources]
statsmodels = { git = "https://github.com/statsmodels/statsmodels" }
